# codebox

./: CMakeLists.txt  CMakeUserPresets.json  README.md
codebox/: CMakeLists.txt  main.cpp
codebox/lib/: libcurl_a.lib
codebox/test/win64/: test7z.7z
